--- a/Terminal/Terminal/Form_close.resx
+++ b/Terminal/Terminal/Form_close.resx
@@ -117,4 +117,209 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button_refresh.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAABGdBTUEAALGPC/xhBQAAK45JREFUeF7t
+        nQdYFUf79t9ujKIiiqAUAQUB6UV6ryLSO9KliCAWjB1LYq8oIB2lSZciTRBRxN4SjdFo1JiiiYklsSPz
+        PQ+wec/Lp/knRvbsgbmv676OAmd3ZnZ++8zszM78jYqKioqKioqKioqKioqKioqKioqKioqKioqKioqK
+        ioqKmyorKwsrLy+fu3fv3iE9P6KiomJUXFy8KTU19WV+fn4dwKLT82MqKipUUVHR+kUPNr2Ke7m2Iz09
+        /ed9+/btLC0tndTzayqqga3t27fPCjgTd8P1+ULi9WJJ57wna19mZmZeAnAWeHh4/LPnz6ioBqYSEhL8
+        JRcqFemfciMOP80mTi/iid+zJR3JycmPsrOz26AJ5tLzp1RUA08MIMoVJmRyjTkx+syH2P88mzg+m0tC
+        nyx5CaDczcnJKQVQlHq+QkU1cASA+DKAKFUYE8VyY6LeZENMrvkRh19ng2M7ox4ve5qUlHQzLy9vGVii
+        56tUVP1fS5cu9ekNiGK5EZlUYUg0DtsSs9uBxO6XWcTtUXRH7M0Vv6Smprbn5+cHh4eH/7vnEFRU/Vdv
+        BaTckEwqMyCKlcZE69hUYnk3iNg8iiCeP8U+n396xc9paWnlubm5Dj2HoaLqn1q0aJHX7wGigC7VJ0qV
+        RmTKRRdicS+IWD4IIV73Y5/s2LHjcnp6ego0u6R7DkdF1b8UHx/v8UcAUSjRI/LgyQ1mRO9zV2J2P4hY
+        3Q/qCL4z98G2bdvOZWVlzc3MzBTqOSwVVf/QnwVEvmQKmVisS1QOWRK9a27E+Ac/Yv990IuZn877ASJK
+        PYAyLTExcVDP4amoBFvz5s1zexdAJoDlK/SI6lErYnDbkxje9SZOd8Iex9Z/dHvXrl0pAIpBzymoqARX
+        sbGxLu8KyIRiHSJXpE0mAijqZ+yI/tfuxOBbN+J2O+Tn9evXH01KSvo4JSVlXM+pqKgET3Fxcc5/FRC0
+        bJEWUajRJ5qf2hO92y7E+Kb7S8/L4d8BKLUQUaLotBUqgdSsWbOc3hcgsvs0wRpEqcmYaF6yIzq3nIjJ
+        dfdnCQkJ7Rs2bMgDUEzo+AmVQGnRokXv3Ad5GyCyhRpErlSLKB4GUL6wJ9rXHTptP/f6cWbB7E83btz4
+        yc6dO+lsYSrBEHSmw8bOnZT3vgGRKVQn48Fy5VpEuc2YaFyzJergqZ96f7N8+fLqTZs2zdq2bZt4TzKo
+        qPir4uLi4WVlZeLl5eX6+/fvtwVbVVVVuaWnpyfKbtM60VeAjC9Qg09VIlcFoJw2I6qfWxHtSzbPHA97
+        fwmgZAIonpC8v3enkoqqj4UQgKeXlpYu3bdvX2F+fv7hPXv2XMnOzr4FvpOZmflDRkbGfTT8++HKlSsb
+        lMpMO/oUkAJVIl2gQqTyVciEeh2ifNaEqF6yILrnbR/Onz+/etmyZYnQR9HuyQIV1V8XPhWCqDAaIoIi
+        wDAHQKiE5tJXEBEepqam/pqWlvb8o47tr+M6Nr+OerWpc+ar9Z2hr9Z2Br76pDOw42My4/Vq4texmlh+
+        GdKpXGFK2AJEKn8ykS5SIfJNukTprDFRvmDWaXzC4Zu4uLgy6MwvBI/tySIV1Z8TADESooMhOKiwsDAH
+        IsJnu3fvfvrx7eRX8S93dkS93N4Z1rGFBHVsJoEdG0lAxwbwOuIP9n6+mng9XUFcHiwiTvcXEMf788jU
+        e3HE4JQnwMEuIFL5ykQqT5mML1MlE5p1ieI5I6J02rjDrNHhizlz5uwBSDzBo3qyTUX1+4IoYQ1AbICm
+        UitEhh/XXUl6seRl0qvYl4mvw17tJMGvtnc58NVW4v90HXH9YQlxuBlHrD4NJaanfIneETeic8iJaDdP
+        I5qNU4lGvR1Rr7MlqrU2ZHKlOd8AkcxTIhJgaQSlVYconNYjk48bP7YqcToLoGwESKx6ioCK6n8F0UIK
+        oFiek5PTDFB8s/JZyov458kdES+SO8NeJpGwF4kk5OkWMuPxeuL89UJidT6M6B12J9r1AEGtPdE4ABBU
+        24CtiRpYtcoKbElU0JUWZPJ+AANdYcZfQHLRimQcWLpShci1wTFPTCGTW4zuhoaG7o2JiVkMoKj3FAvV
+        QBb2K4qKitwgUlQCFDeSk5MfLniW8mr2s9TOyBcpJPRpIvH7aQPx+HYFmXp5NjFp8yXadQjEVKJ5ACLD
+        AQCjBsCose22IAGydxJYgYzLn0SkDqgR2VY43lHNTo0Go6+CgoJ2RUdHhwEoI3uKimogqaCgYNS+ffv8
+        oIN9Oikp6f6ip6kv5zxLfR31PJ2EP99N/H+AKPFlPLE8HUqmNLkBFI5dYGjXOhAtcH8CZCxYfA+Asg8i
+        Sp0qkT0Cxzuk8UynyOTsjBkztgIo1vBJF7kbCML3uwGOWQDG8XWfpfwS/yT9ZcyzDBL1LI3MfJRI3G4s
+        JdZnwonhIS+iW+9EdOqnQxMKPAAAEd8jD55IJIonASgqZHyLKplYq/GjXorZYX9//48iIyM1IKL8o6co
+        qfqTsrOzxQCOhdCMOrrmZvLj+b+kvox+mklmPckgM75bT+zPRxPTI35Er9GV6DY4AxzogQmIeM4E+NlE
+        Mq5UgUg2wPeaJhOFCu2v9NeYV/r5+YXMnDlTvqdYqfqDAIyY1NTUYyvvpTya/0vGi+gnmSTyUQrxu7OW
+        WJ0IJQZNHl1g6DW6kCkNLhQQAAQtliNHxHLlyLiKSUSyTplI1CsR+UL1S46Ojqs8PT3doP82tKeIqQRR
+        AIYegHFg+/btt+c+zng5+9ccEv4ghfjcWk2sT4YR/YPuPXajgLwFkDE5smRMtiwRy4eoUgH9lAOTiMT+
+        Sb8o7NI4Ymdnt8jd3d0YippOqxckQf9iTFZW1hoA49rin1N/jX2c1RnxIJV43VhFrE9FdEUMgyYGDgrI
+        HwEELZolQ8QK5Ih4+UQiVi1PxhUr3DM1Nf3E2to6wtfXdyIUPQWFy8JHtjk5OZ67du1qXX4/+UHsw8yO
+        2Mc5xPerNcT6xExi2OxFDJo9KSB/ARDRrPFkdA58FkBUKYffl8t1SmVOumRgYLDS0tLS2czMTKznclBx
+        SRAxJHeDVp3f+f28+6lPYh5lkbDvdxCHMzHE+JBvFxx8B6TSvNv7AZD9AAhYCSAROEDAo7KkyahsaSJa
+        KEPGlMkR0VLZTsmd8ienTJkSZwEyNDSkq61wRRA1LKE51bjobtJP0Q9ySOT9VOJ+ZSkxbfUnxs0+xKjZ
+        m3+AVFsRFXTV7wCCUaRCAAHJlOry6BwAZR/8rng8Ec0b/1ByrdxBdXX1MD09Pc2eS0TFD+EzeehvRG/a
+        tOnMgrspj6J/ziL+tzYQmxMREDV8us0vQGoAEADjTwFSIZiA/OY9kmR0gTQZvU+KiKZLf6OgoLBQTU3N
+        VVxc/MOeS0bFlpKSksR27tyZuPjWjm/n3Et/Fnk3hThfjCfGLX5gX/4CAnAMREBEMiSISCZ459jbUlJS
+        sfLy8l5gusIK20pLSzOAqFH50dc7vo++n0WCbm8ldieiiEkXHPwDpGuyYs3ABUR417ifh84WKYdL5DRo
+        0CCF7qtFxaqSk5Onr1279tC8r3fej/4xnXhfXU0sjgYT0xZ/vgKCcAxkQEYsFzsCl2cGGGcBf4DXiopl
+        JSYmRqxZs6Y19utdD8O/S4Im1QJienhGt/kJSA8cAxGQkZvGXhvqK5wKl8cOTF+44pP+vn379njolLdF
+        f5P8NPgWNKlORhGz1h44+AlIz3sg7wUQAXqKNTJF6qHQLJFiuDZeYDkwXXuLH4qJiRkE/Y3F8y5vuh71
+        ze6X/l+uI9bHZnbBQQFhH5DRGdKvRywTa4VL4wvWA/8LrxMVHwQR44MNGzYsj7u84cuIO8mvvT5fSSyP
+        hhDz1sD+BYiADBSO3CB5CS5LCNgCLILXiIpPAjj+BZ3xRbGfrb8a+U0Kcft0KbFoDe6Co38BgnBwG5DR
+        26RvCgWLZMFlwX6GTNcFouKr/g6d8bmzL3xyJfTWrk7Xi4sBiqAecwyQd+2kC8JcrAzZFyPmiVXC9fAD
+        4zsgdA8SLmj16tXhc+fOrQm9mdjhfH4RsTiCkYPDgPxf4yACNllRLGPCq1ErJA7DpQgEYz9jMF4XKg5o
+        1apVLnPmzCkPub7lmfOFjwCOEIEB5LeR9LdNVhQAQEZvlbkGlyEIjM0pumADlwSRwzg2NjY/9MqmB64X
+        IHJAh7y/AaJUZPqrUqnJK64BIpok973wLPECuAzTwBO6LggVdwR9jokxMTGZwZ+u+87t08VdT6sEFRC1
+        /davlfNNv1VI0jsru0ajViJOKVfUXXqz8NRxayGr/uAgpVJjgIQDgGRNfCGyWLIB0oSPbZXBtJ/BNS1e
+        vFgE4NgYcmb1l+6fLSdWx0IFChC1cptnk/dZ3J24ZUqreJhCCmQJH4W6gS3BOmDcmwPXvxUFC4P1x6/T
+        aOYnIOP2TOoYvUr66Icmw9ZAenTBI8BUXBM+zoU+R2xQ27KLnpdXEev2cGLZFsJ5QNT32z6ZvMfihtwq
+        rf2QjQCwO9gQjI9BcXr3f8BvewVVVeojpRJ+ASKWKH8T0hAMxuYUTg+hWyFwVXFxcY4BzQtO+l75mNi0
+        RwIcED04DIh6vtUt+c36TZB0bCo5gjXAf6ozO3z4cC3JpUrlbAMikT7pJ5E5EqWQBFcwXbqH6wI4FGfM
+        mJHscyHhZ/uTswGMMM4CoppndVN6vtpeSLYzGB99SmAe3kWZmZnhbAMitloGH9t6g3FPEDpviuuKiooS
+        DgwMXOF7bOlVxzNziVUXHNwDRC3X+rpkjGoGJHk6GPsSf3kJzrKysgVsASK2dkL7ECthfDiAzT86PURQ
+        FBoa6uvbFH8KH+ciHFwDRKPI/lvZhZp5kFSMGPjY8729NlpSUjK3rwGR2DXp+oiQsQzY+HCA9jMERUFB
+        QZNcXFy2eJxf9tKmPYJTgOjUTH+u8Il+FSQTp3Ergd97cwQAiesrQKSzVR+OXjAe3+rD5hSCTWfbCpK0
+        tLT+7enpOcu9Zf4V7Hfg1HWuAKK+x/YyJBGfSBmB+2x6BW7f1heAjF0vfxwOj+MZBmA6niGIgk65kXNB
+        eMP0s/MAjnDOAKK0ybgOkucClu5KaB+qqKgo9n0CIpmodFnEZ2wSHNoUPKbrJFSCJ2hajbC1tV3ufHTu
+        d7bHIzgBiE7F9B/kl+sWQfKwcrGy2Nn7AkQqXfWO6CzpXDjkVHCfg03Vx7K3t/dyLI846nAqhti0Ixz8
+        BUQjy/YiJAsn5qmAWVtXtri4ePZfAUQmV/OJ2AK5MjgUTkPHJ2u0OSXocnBwUDQ1NV0x/dTcFwgHvwFR
+        S7PC9jp2ZCW7Esii3hUQuX06nRLrlJjVQ3BVdRytp+oH+qeZmVmQQ33UF7bHI7vg4CcgKjvMcSQc50rx
+        pb0OTazoPwvI+N3qN+CrOMeLrh7S32RsbKykq6v7kX3brOcMHPwCRGmDSQ0kCaeI8G1yXmFh4R8GRDZb
+        63uxOXKF8DVMM50e0g/1b4DDw7oi+KJte8RvcPADEOXNZrWQHrwD83WtWNwj8f8CRL5Yr1NypSJOQ8fm
+        FE5Dp+vb9kdpa2vLKikpLbA5FvWKFw62AVHbZdUCycFRZb5vGwYRJPJtgCgU67+W3qzeDn+GzSl98DD8
+        DlX/1D+VlZUdzYoCTuOIOb8A0ciwPwVpwT4HJ14hfRsgE7J1voZfM9PQ6fSQ/i5FRUVxXOUbokfXlBJ+
+        AKKd64hrOeHosnhXojig3oAoFBr+IrFEqQJ+hfO+cHoL1UCQrKzsVLMCv3Z8z4MfgBjWef4CycCmCqcG
+        0XJzcyMYQMZvUMdVCnE8AzeboYs+DxQJCwsPFxMTi7Y7GvmCX4BMWmWEa8dqdaeIO2IAEXEcux7+i9PQ
+        6WPbgSYJCYkpU3Y5V9t2wcE+IGq7rLFTbgXm3GzWvLy8SPjA2cJi4H/gz6gGlv4xbNgwH4v6kO/4AciU
+        Mlfs7GIFxAUSOKeEhAR8MkXf6huoEhUVlfvggw9CbVrDX7ANiFGTz2tIAj4JwjlKVFTcE8BhZrjXs922
+        PYqwDYhGqn0bJMEWTO/QVJwUjvi6WdQFfcs2IEaN3s/g3PjC02hMCBUVFyULDrZpi3jNNiDK60xxJXJc
+        cYSKirPS101zPmR7HOFgDxCjGo8f4dw4nkBXIqfirLByTjPZ73+dbUCUVpqWwLnxxScqKs4K5w8FWh8J
+        f84mIIa13j/BefHlp7+8ZhUVVV9KSWWVVUEXHCwCorTODJe5wf256eQ+Ks4K3+k2N8j1PMkmIEZ1Po/h
+        vDgZkU7XoOK0cKKdp0VjyA9sAqK9Z/pZOC9OKWFt0QUqqneRsJjVhITf4GABEJNmP2bUnE4Rp+K85Ccv
+        Ns9iExDDGq8f4LwesrKyw7uTQEXFXenrprl2j3+wBIh21rSTcF6z7tNTUXFbDqb7Z3zBFiCmh/w64JzB
+        QkJCdFIiFeeFHWRfy0MzH7MFiHFD19MrPy0tLdq8ouK8cI2pIOu2yFdsATKlxPU6nBMXN6Ci4rzwne9g
+        m7bI12wBorbNpm7YsGF0YiIV54WvjCqrfWyzz/b4rP/C0ceAyIRr7FRUVJzYnQQqKu4K3/nW09nt1Mgm
+        IMM1xRa6uLjQPfeoOC9cYdzCsND7NFuAGNf5/gzn9F6wYAGdnEjFeeHeFFPNKvARLzuA6BW54lZp9lu3
+        bqXvflBxXviKrYt5XdAdtgDR2u2Ae2QYJSQk0A0qqTgvHIdwt2gMucsWICrrLSqMjIxwwTUqKs4LX5Ly
+        tDwY+gNbgCguMcyNi4ujU0yoBELjwF6WzWH32QJkYqxO6rp16yggVAIhCbCXZVPYT2wBMj5IdVtycjLu
+        0UdFxXnhKLqPVXPYz2wBIumttCknJ4f2QagEQjJgH6tDYQ/YBKSwsJA2sagEQuPBrANSUVFh2X16Kipu
+        SwrsDU0s1vogUjPUtlZVVdl3n56K39q/f79kQkKC5uDBg3HPeeyTsmHcOgIHqTmv7qdYLHbSZSO1kqqr
+        q927T0/Fbx05cmTevNT4iiGOw7YOchT6rx3QQ37X/+7y4Dd76qC3Gk6Lu/8iJJwXJhIB+ZEtQOTjDbLr
+        6urCuk9PxW8dP358WXhOdOuoDEkikiEBHtflkeljiXC6OBFOEycj0KloMfCY3zx8tyh4NBnW5VG/WQid
+        IkKGdnkkGZr8Xw/ZPPwenNYDLBCTVXHnWA/Lg6HsjaSvMS85ePDggu7TU/Fb7e3t67wzZhxjC5APNw7/
+        Hk6LuxYLdSWA48IZtW4WDSHfsgWIRqJdIwDyMZyXrqTIZ+F8uPLy8lUjVoxp64aDBUDWjbgFp8YdgQVi
+        siouGOdoVhVwnS1AdPc6n29sbNyZnZ1Nd4Xls/bu3TuksrJyp/B68cusAbJyGG7tjZskCUQnHRNpbVzk
+        c4EtQAwrve5AJz2ruLh4aHcSqPilvLy8YWVlZVkjE8f9yBYgg5cKMcs94btInBdudWY4JdOtlS1ATA/N
+        eFVQUJBbW1uLj/uo+KgDBw7I7969O0MkXbKTLUA+mDu0AU49BSwQrzvgkj/qmpvsy9kCBL0ye11Jc3Pz
+        1O4kUPFLhw8f9gnfEVU6KlOqB46+BWRIknAnnDYUrAwWiC20saMsBw6xPRbF2qomM7Jn1Z8+fRo76lR8
+        1NmzZ7frrDNqZA2QXcLMesw4QC0wwndCgq2PRnawBYhhvuv5K1euVHefnopfunz5ct3IDRKXWATkFZwW
+        AcG12ARG2FEPsG6N6N5ZigVAjA54/Xjx4sUWfIrSnQQqtgX9wFEQQZpHJkk+ZAuQodtH/gKn9gcL1Dbf
+        2MxyNa8N/oYtQEya/F5AB7EU+iEu3UmgYlutra2BpaWlBSJpUi9ZiyCfDL82aNAgRzi9wI2BmRnkeh5n
+        CxDTw/6dK1as2Hbu3LmUnvNTsSyI4Hu99gScRzjYAmRwvFDL0KFDTXqSIFBSVVtvX8oWILj9gUt95J0b
+        N2600+V/2Bc2r65fv35cIU39WzYB+SBoSJ6MjIxaTzIESmLSfqob2QTEujno6alTp1qgmeXTkwYqltTS
+        0hJ27NixhrGZE16wCci/9P+z2snJCafVC5xwfSx/68Mzn7AFiHlrANnaln7lzJkz6d1JoGJJfz9//vye
+        uKr4Lxg42ABkyLYRD+HcPlFRUcLdyRAs4VMFO+Myv0tsAYKecWj+vatXr7YXFxdP6E4GVV+rvLx8MpT5
+        cb1c05/YBGTw8mFn4PSWMTExAjEH603S0to+rYZNQGyOhHYePny4AZpZM3vSQNXHgrKOyT+277NxORN/
+        g4MNQAZFDC2D0wtk/4MRjm6GAhCdbAFiengGSTi+/ZuLFy9WJSYmDutOBlVfKSMjY+SlS5caAivDv+OF
+        o68B6RlBD1FSUhKoEfTewgrqYdEYco9NQLxOzCVnrp2/Vl1djc/HqfpQNTU1Hkcvt12dvE/3f+Doa0A+
+        3CB8B07v4uPjM6o7JYIpnDxmqr/Xo51NQMwOB5Csi0Xfnjt3rsrDwwMnT1L1gRISEj6ASN3wceuG70dl
+        SbMKyOCFQq2QBENIg0BMUPw9KamstMpnExB0yOkl5OyNCzerqqroI98+Um1tbUj71eO3DMutCNuA/Mf/
+        wxxIQr/Y0RhfpPe2bAr5mU1ATFv8yd4r5fchitSnpqYKdBjmotLT08ecP3++adPxbQ9GZ41nFZAhW0b8
+        AEnwNDY2Ht2dGsGXrXGx7yW2AfE/GU9OfHXmm/r6+tU96aB6T2pqatp46IuWb7RLjAnbgHyYMPwsJMGq
+        OyX9QyrgYJujEa/ZBMSkxY9sv5L9/PTp0825ubk63Umh+qsqLCw0Pnv27KEFR5Y+FwU42ARkSNJI5v2P
+        ftG8YoSj6r6WzWEP2QbE+Vg0OXCt+Tu446Vt27ZNoN4Z4KISExNHt7S0ZBdcLL6nWKBFWAdki/B9SIaX
+        vr5+v5tvZ6a/1+ME24AYg+POr+08depUa2lpaXRPWqjeTX8vLy+fV33xwE3nOh+AQ4Z1QAZ/NLwF0tEv
+        V/LHFRdDbNoiOtkGxAa+k/J53pO2traD2dnZdBX4dxQ0U+3a29ubVrSveT4+V5l1QIZ2N69CwP2mc84r
+        fF7tbFo54wbbgBi3+BK/E/NJ4eXKu42NjfugmUBXP/mT2rlzpww0U0uTTqX9qFdmTsZky7IOyJA1wrib
+        sQO43y4QOFFpoUkmPwAxOeRL5l9YR8o/O3ADmglbExIS6DSUP6i1a9eK7N+/P3HPqbyv3Bv8u+DgByCD
+        XAcnQXJwe41+K1z50N2sLuh7tgExPuQDP/Mjn1xOJkXnqj4vKChYFB4eLlDvMfNDOFO2sLBweU573hdR
+        rXFEfM8EvgAyZIPw15AcXF5UIBaH+yuarPaJdRE/AEHbt4aSbVezSf6Jsk8zMzPDe9JE9RZlZWXNzmjN
+        +XTJiZVkQr4qGZPTDQfbgHwQLLQHktOvHu2+Tdi0cTevD7zLD0CMm32IZ3ss2XEl5wU0tUpSUlJwXwmq
+        XsI5Trt37w7e3Zxxbtnx1a+0S0yIWI4cXwAZuql7YiJ4wCwtqwEOBRg6+QGIUbM3mXFiAdl2KftJxpG8
+        M7t27QrEVcm7k0aFzaqkpKTQxMaUM8vaVz8zqbAl4jkT+AKIULIIrpyIT65wsHnACNeu+v+iCJuAGDZ7
+        kZBTi8mWzzKeJR/OPg2QRAMkOKA5oLVw4UIhKIvYTfXbzy5tX/3CutqpCw5+ATJ080iMHq7gAbcQhzo4
+        xLrtv1GEbUDQoacXk7WXUzp3tKSdSUxMnD+Qn25B3kcBHB99XLPh7Pz2ZcS2xgU65RP5BghED2ZaCa67
+        O+CETRoXoxLvy/wExKDZkwRAc2vVpUSysSnp7I4dO6CeJMh2J3HgCPIsv3379lUrqladj2mLJxZVjgCH
+        PF8BGZIw4hwkbTp4wL7TIy0/a0oSvwExaPIgXu0xZMnFzWTVoa2Xt23btnX58uXGUGkE/mWcP6B/Ql7N
+        Ic/b46uXfjHzcAzRr7AGMBT4CohQ8iim74Gbwg5Y4YiolW6a0yF+A2LQ5E6cjkSQ+AvrybJjG79dXbKx
+        ccWKFX7R0dECsTHkuyg8PHwU3AQCFhcsb46qn3c3oDmCaJYYk7F7EQ7+AvLhvOG454dpd0oHtnBNI1+L
+        hsB7/AZE/6A7sT0cRGadWU7mn/mkY0nNx6egAi2aN2+eXndS+4/i4uL0IW9LYkvmnw5qntXp2uBPFPfp
+        kHEAB78BEdo4EgcFvcF0tkOPJqt9YlXEBUDQJvBz//a5ZM7ZVSTuUMLXUJE2x8fHh4SFhQn8HK7Y2Fgp
+        yEsYRMctIdVRd/ybobyrncn4fBWAYxInABkcJLQXkjogBgX/qLDDbq+3x/UkFwDRP+hG9Bpdock1k8w8
+        uZjMOrmsI7Zq2XmoWKuggjkFBQUJ3HslHh4eIyFqOGMeAosiL3gfDOmKGrrl5kQiVwmsyAlAhi4RboPk
+        WoMHQv/vTwmnw/uZ1wfc4wogeo0uxKLZj3i2zSbhJ5eQ8KOLfo0oWnAMIEmYOXOmvSAsOQNgjI6IiHCE
+        ZuLKgL1h7W4HAp64NQYQ8+ppXU0qyTyEgxuADN88Csc8cJGNfjmd/X1o8uQE8zwuATKlods2hwKI37E5
+        JPhEPAk6Mv+XkPw5rZGRkUshmjj6+vpOhE/ObEGNb9t5eXnJBwYGToc0LvfODmpzqfF/5tzoR2wPuBG1
+        UiMinT+ZSOUpcwqQwcHDciH5tGn1O8KnWpbqW+2ruQSIboMz0a13JgYNrsS+JZD4HIslM47NJf4tsU8C
+        8qOPhYaGrgJAgvz9/c34udK4q6urNEQ1i4CAgBDQarcsv2PTqr2fTqvzJra1bkQbmlOyBepECuHIV+YU
+        IB/OHrEfskCfWv0B4XQPN71ct1NcA0S33ono1E/vjijNM4j7kUjiczSaeLbO6vTcH3HVKy20Ae7c89zd
+        3YPd3NymAixK06ZN67PpK3hsR0dHZQDDAc4b7OnpOX/aTq+DUwvcv7Srde+0r/MgFjXORAvAkCtUJ9IF
+        KgAGmluACC0deQyyg1PZOROFuS5xcIBRlc9tLgKija5zJFPg/5YHvYlDSxBxaQ0nrmDnhtBHzmXB112y
+        A486OzsvBMeBg6Ay20ydOlXbwsJCzsbGZoiZmdm/0JBPHCXGyPkm/5P5O/BQa2vriXZ2djp4LDxmz7EX
+        2qd6tNnmu123rnR7bAORwvKAMzGumko0ykyJ3D5NMr5ADazKSUCE1o26Bvn0A9N+x5+UAjjEvCXoGVcB
+        0a6bRrRrHYgW2BCaXxYAi11zAJneEkIcW4LJtIagF9PqAh86lPp9NS3d+7DDRo8yqNyL7O3tP7K1tY2G
+        z5kASwDYGSq/C/zMifk3fgIMQeBwBweH2fgd/K7NepdymxSXVqtC568sKpwfWlY7v7A44ELQBlX2RBOi
+        hXKJPpEt1CAyEDXGozkKyPDEMY/gGuNcK9w2nOpPCu+gOiqfWBQJAiCatVOJ5oGpXf+eUjudGNZDpW30
+        InZN/sQejJ92TX7ErsH3tU2jT4d1pddP1mWe31sVe3xlmeV8zirb5YJ1tssZ+Dxrke10wTzL6ZzFPpdb
+        5iXO35lVOD8wq3HuMK9x7jSvdSFmB5yIWc10YlzjSHQrbYhauSlRKjUgE4t1iCxEDNl9GgIByJBQ4UK4
+        xvjqA9U7CpsgZirrLcsFBRCNA/ZEo8aOqNfYdn1qgnXh5wZ104lRnTMxqYdI0+hBLBs8iUW9BzGvdyfm
+        dWg3sGuXzbrsQkxqnYjJAQABDTDoVdkR7f1WRL3CjCiXGhGFEj2AQpfIFWl3WbZIS2AA+TBqRClcWyMw
+        He/4i8Ldg+zVt9jWCBogXa62AVsTNbBqlRXYkqiA1eDfapVQ2ausiWaVDRg/rYkG/E69Em1BJu83Jcrl
+        xkSpHGAo1e8CQr7LU7rAmNBlHYEDZEiMcCVcUxwMpGsCvCfhkyBHjcSpDf0FEJUuAKC/gMaIUAEwVJgQ
+        pQpjoghQKAIUk8oNyaQyA6KA7ieACM0fWQvXciqY7kT8noUT11y0kqcdooAIJiDDFoo0wjWcBh4w75az
+        LZz566aZ5NBEAREsQIbFj8bp6zjWMRwvJFXfCScKuqhvsamlgAgGIEJxI6vhmuF2eHT6OkvCED1NbYtV
+        NQWE24AIxYhUwLWyBw/4BTHYFha4rcoa8xIKCPcAEUmTfDU0cmQRXCPc6IZOIeGT8DGh0aRlxnlG9d6P
+        KCDcAGTkznE/wnXB98nxTUy63hifhSPuOBobrFfsepUCwl9AhNeL4wrsQWBVMBWHhEv1+Gjstm+lgPAH
+        kOFLxhyCa+AF7tcrsAuycAWSaZPXWlSYNvt2UEDYAWRU+vgXQrNH49QRHADER/FUHBZOTTEAB08pdblB
+        AelbQEQ2jfsCyxo8BdzvtyboT5oI9lJLsjlEAXn/gIhmynSO+EgcR8Y9wANuJcr+Igz35nKxOulTipy+
+        pIC8H0BENkli1MCnVPiKLB0Z7wfCF3LclTeb1RrWeT6lgLwbIKJpMr+MmC+Go+K42roMFixV/xGOvmuD
+        g9WSbY7qN3q8pID8QUAyJ7wYtULiMJQdPr7VBOP2FVT9VLiWlS04SLtg2lUA5TUF5M2AiGVP7BDdLM2M
+        a+CI+Egw1QARdixx6nWIZr79FQrI/wIiulkGwcCnU7jtsjSYagAKX/eUB0+VDFPZpZZmfWogAzI2R6FT
+        dI10+1B3kUQoE5xgOAFM1c/Fu4zO24yT6XD011LcSXad8nazFt0ap6cDBZCxWYpPRi2VaoL8h4LNwRgx
+        cEzjTWXFayoBVe8LiZGC17gWFWOcTMcYXwPFDVtMwMETFmsXaxTa3dKudnza3wCRyFF6MjZR/ivhiLH5
+        kFfsY+ACCmPBONDKlAdvOfUuw95lTCUA4r1gvCAwFxxn/+KdEY0VASMHGsHA6fP4dAYtBBYF4+gwLqYc
+        OWmDYYt6ns0tzUqHJ4IKiGS20q9jExVuii4e3wx5wj3icd4UPtnDKTr4lA/zjuWA5cGUDZYTU2ZYfrzg
+        9IaFiuPiBYOBghcGXhCwQuAbbjjQhQOK+IQGKwqu8IdwiIFxhUeMKLjhqBM4DDxXdolWo1KSySX1EtuH
+        XAdEKkPlgfjH8p+Ojpasg7TPAWPHG9/uw22VMX9jwJhffLqH+cdywLc2sVywfN4ETm9YeEGh4qh6w4EX
+        kAGDgQIjAy8QCANWEIQBQcANcqTAOAiGg4s4XQVXG1cETwYjKDZgjCqzwEvF3GRLxi9Qb1XcafilarH1
+        L/wGZHym6uOxHytcHR0l3TLMcTS+sLQIjNECp4RYgDEfmB9cuRLzh/nE/GK+Mf/YzMLyYKBhgEFYsPwY
+        WHqDQiMJx8ULCAMH3vF6g4F3SSZCIBS4Gjt20HmBwG2H8Q6LQGiBdcH48g+207F/gh1ZHBdwAweCY8HL
+        wVuEtEWKRT1kDkovUD0vn6h/R3mP6SO1cssO1UrLTpX9lp1/FZCJRVM6Jxbpdk4o0H41PlX9ocR6pdui
+        sTLnRjiJNw5WG4YrFW4ELwUjwP5gXCgB04vpNgRjPnTAmC81MOZTCYz5xvzj42/spGO58MKC5Yblh+WI
+        UaU3JEwkoeKoGECYZhUTOZimFC8cTNOJiRb4OBPvqFhR8EUfBAPb5tgHwZnBxmAGChxkxGndOIaClQ8h
+        8QRjZcSnQFgx48GrwdvAu8F7wLj3Rb6Yv+xpiRjFS1KLJn8ps0r9tuw27XuyW7XAml2W2apxT2YLWh2s
+        9oNEgtKtsfGTro2Jkv1MxFfiFBwjr+d42eAU8BbwSvB8MEYK7HBj3wKng2CzENOJj2wx8lmCzcAIOuYL
+        84egYH4ZULAcsDyYqILlhOXFQMJEEyxXvAHhjYgXEBpBOKregOCF4wUELyxeYGxWMdEDKwATPXA8hGlK
+        4Z0Vp1Rg5NAHY4XCiXnYRMEVAe3AOICGbXkXsDsYIcGNJ3Gl8hlgrKjYZ4kEM9AsAyM4G8BYsXeCEaDf
+        8w7wZvB68CrwEvBcMB4XgcBJg3g+XzCeH5tSCAfCi+lDmBFqhPtNkQTzifnFfDNRBMsDy4U3imC5MYBg
+        RKaACJh6N7HeFEXw4mKbGtvW2PfAO2PvfgcDCjazmGjC28zCyoURBe/EDDBYAfEujXdr3PgeKydWUgQH
+        Kyze0bHyYiVGgDDaYKUO6DE203obf45/g3+Lxu9h3wePgzDicTF6IaAYKRAGhJaJFggEpg/BxvRixOCF
+        gjdq9AaD6Y8wkaN3XwTLk7eJxdtZp4BwVAwgTBRhIOHtizCg8PZHmI46Vga8WzLAYEXB9jg2NxAarERY
+        mfBOy4CDFQ2bYljpsLmC0QYrIkYcrJR4t0aQ8M6NlRWbOFhxESo0VmQ0AtbbzO/w7/A7aPw+HgePhxUf
+        j4/nQmgZABBkpo+B7+oz/QwEHsHHfGB+MF+YP14genfQsXyYfgcTNRAMJnJQOARMvJDgResNCt7x8OLi
+        RWaAwQvPRBesDHinxIqBFQQrCvOUi+m3YEXCpgdWKuzMYuTBioZ3X6x0eCfGCohteayMaKyYCBdWUjRC
+        xhgr79vM/A3zPTwGmqnoeA48F54TjefHdGCasOJj+jCdmF4GAMwH5gfzhTcHBgQmQiAMWB4MEMxTKwYK
+        Bgws195wUEA4LuYi9QaFgYUBhhcaXnB44ekNEBN50AxMvEAxUKGx4iFcjLEyMqAxxor6R8z7HeY4aObY
+        eC6mojOVnanwTBqZis9b+XkB4IUAywLNgMDAwADBQMGAQeEQQPGCwpi5mIyZi8yYufi8EDEgMWaA4gWL
+        MQMYr7HS9TZTIf+s33QsdO9z8qYJzZte3rygefPJm//eZdO77HqXLZWAq/cF/T33rgxvcu8K9DbzVrq+
+        8JvO+Ta/KR+9/abyeJOpqKioqKioqKioqKioqKioqKioqKiouKu//e3/AarmUFC88/dWAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
+  <metadata name="userQuerry1BindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>116, 17</value>
+  </metadata>
+  <metadata name="dataSet1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="dataSet1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="userQuerry1TableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>313, 17</value>
+  </metadata>
 </root>
